<resources>
    <string name="app_name">MAD24</string>
    <string name="editSave">Save</string>
    <string name="editCancel">Cancel</string>
    <string name="your_profile">Your profile</string>
    <string name="nameProfile">Name:</string>
    <string name="phoneProfile">Phone:</string>
    <string name="mailProfile">Mail:</string>
    <string name="bioProfile">Short bio:</string>
    <string name="cityProfile">City:</string>
    <string name="genreProfile">Favourite book genres:</string>
    <string name="buttonGenreProfile">Add or remove genres</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="noFavouriteGenreProfile">No favourite genre</string>
    <string name="invalidName">Name not valid</string>
    <string name="invalidCity">City not valid</string>
    <string name="invalidPhone">Phone number not valid</string>
    <string name="editprofile_insertValidName">Insert a name longer than 2 chars</string>
    <string name="editprofile_insertValidCity">Insert a valid city</string>
    <string name="editprofile_selectSuggestion">Select a city by suggestion</string>
    <string name="editprofile_insertValidPhone">Insert a valid phone number</string>
    <string name="showprofile_waitData">Please, wait that data are loaded</string>
    <string name="showprofile_dataNotLoaded">Data has not yet been uploaded</string>
    <string name="namePlaceholder">Insert your name</string>
    <string name="phonePlaceholder">Insert your phone number</string>
    <string name="mailPlaceholder">Insert your mail</string>
    <string name="bioPlaceholder">Insert your bio</string>
    <string name="cityPlaceholder">Insert your city</string>
    <string name="dialog_camera">Take Photo</string>
    <string name="dialog_library">Photo Library</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_camera">Error while capturing image</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="deny_permission_read">External storage read permission is necessary</string>
    <string name="deny_permission_camera">Camera permission is necessary</string>
    <string name="saving">Saving…</string>
    <string name="saved">Saved!</string>
    <string name="mail_not_valid">E-mail not valid!</string>
    <string name="insert_valid_mail">Please insert a valid email address</string>
    <string name="phone_not_valid">Phone number not valid!</string>
    <string name="insert_valid_phone">Please insert a valid phone number</string>
    <string name="google_connection_failed">Google Places API connection failed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_genre_alertdialog">Choose your favourite genres</string>
    <string name="join_us_invitation">MAD24 is a free community for all book lovers out there who love to share a nice book! \n\n\n Whether you are new reader, a passionate book-worm, or a student on a low budget trying save some money for a course, MAD24 is the app for you. \n\n\n Join now, it\'s free!</string>
    <string-array name="genres">
        <item>Action and Adventure</item>
        <item>Art</item>
        <item>Biography</item>
        <item>Cookbook</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Guide</item>
        <item>History</item>
        <item>Horror</item>
        <item>Kids</item>
        <item>Mystery</item>
        <item>Other</item>
        <item>Romance</item>
        <item>Science</item>
        <item>Science fiction</item>
        <item>School</item>
        <item>Travel</item>
    </string-array>
    <string name="title_activity_books">BooksActivity</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profile</string>
    <string name="dialog_scan">ISBN scan</string>
    <string name="dialog_manualIns">Manual Insert</string>
    <string name="manual_insert_error">Error getting info about book</string>
    <string name="manual_insert_error_retry">Please retry or insert data by hand"</string>
    <string name="passwordPlaceholder">Insert your password</string>
    <string name="signup">Sign up</string>
    <string name="signup_terms">By signing up, you agree to our Terms and Conditions</string>
    <string name="signup_insertValidMail">Insert a valid mail</string>
    <string name="signup_insertValidPassword">Password must be longer than 6 chars</string>
    <string name="signup_insertValidName">Name must be longer than 2 chars</string>
    <string name="signup_insertValidCity">Insert a valid city</string>
    <string name="signup_selectSuggestion">Select a city by suggestion</string>
    <string name="signup_insertValidPhone">Insert a valid phone number</string>
    <string name="signup_mail_duplicated">Email already associated to an account</string>
    <string name="signup_insert_another_mail">Please insert a different email</string>
    <string name="signup_error">An error occurred during authentication</string>
    <string name="signup_retry">Please, check you internet connection and retry</string>
    <string name="signup_no_internet_connection">No Internet connection</string>
    <string name="signup_internet_retry">Connect your device and retry</string>
    <string name="signup_genre_button">Add your favourite genres</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_success">Reset password success</string>
    <string name="reset_password_success_mail">Check your email, you should have received the instruction</string>
    <string name="reset_password_failed">Reset password failed</string>
    <string name="reset_password_failed_mail">Failed sending reset email, check if email is correct</string>
    <string name="login_insert_mail">Insert your email</string>
    <string name="login_insert_password">Insert your password</string>
    <string name="login_login_failed">Login failed</string>
    <string name="login_wrong_mail_pass">Wrong mail or password. Insert your credentials and retry</string>
    <string name="login_or">OR</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_insertValidPassword">Your password must be at least 6 characters long</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="title_activity_manual_insert">ManualInsertActivity</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_genre">Genre</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_publisher">Publisher</string>
    <string name="bookSend">Send</string>
    <string name="required">Required!</string>
    <string name="ISBN_explain">ISBN is a code of 13 digits!</string>
    <string name="edition_year">Edition Year</string>
    <string name="book_conditions">Book conditions</string>
    <string name="book_submitted">Book successfully submitted!</string>
    <string name="isbn_not_valid">ISBN code is not valid!</string>
    <string name="search_search">Search…</string>
    <string name="search_noResults">No results in your area</string>
    <string name="search_searchBy">Search by</string>
    <string name="search_searchBy_all">All fields</string>
    <string name="search_searchBy_title">Title</string>
    <string name="search_searchBy_author">Author</string>
    <string name="search_searchInArea">Search in the area of</string>
    <string name="search_searchPlaceholderCity">Insert a city</string>
    <string name="search_searchGenre">Genres</string>
    <string name="search_yourPosition">Your position</string>
    <string name="homepage_noBooks">No books in your area. Be the first!</string>
    <string name="manualInsert_uploadSuccessful">Upload successful</string>
    <string name="manualInsert_uploadError">Error in uploading!</string>
    <string name="manualInsert_uploading">Uploading…</string>
    <string name="coordinates_error">Error</string>
    <string name="coordinates_errorGettingInfo">Error getting user informations</string>
    <string name="facebook_app_id">102712380576500</string>
    <string name="fb_login_protocol_scheme">fb102712380576500</string>
    <string name="fields">name, first_name, last_name, locale, picture.type(large), timezone, email</string>
    <string-array name="fieldsArray">
        <item>name</item>
        <item>first_name</item>
        <item>last_name</item>
        <item>locale</item>
        <item>picture</item>
        <item>timezone</item>
        <item>email</item>
    </string-array>
    <string name="login_with_fb">Access with Facebook</string>
    <string name="signup_with_fb">Sign up with Facebook</string>
    <string name="logout_from_fb">Log out</string>
    <string name="fb_wait">Loading data…</string>
    <string name="fb_wait_message">Please wait while we fetch your data…</string>
    <string name="fb_error">Whoops…</string>
    <string name="fb_error_get_me">Whoops! An error occurred while trying to fetch your user data!</string>
    <string name="fb_error_authenticate">We could not authenticate you at this time. Try again later or choose another method.</string>
    <string name="title_activity_scan_isbn">ScanISBNActivity</string>
    <string name="myBooks">My books</string>
    <string name="noBooks">Nothing to show, add a new book in the home page</string>
    <string name="borrowedBooks">Borrowed books</string>
    <string name="noBorrowedBooks">You don\'t have any borrowed book</string>
    <string name="myBooks_cantRemoveBookOnLoan">You can\'t remove a book on loan</string>
    <string name="myBooks_bookRemoved">Book removed!</string>
    <string name="myBooks_errorRemovingBook">Error removing the book</string>
    <string name="myBooks_sureRemoveBook">Are you sure to remove the book?</string>
    <string name="read_more">More…</string>
    <string name="book_by">By %1$s</string>
    <string name="book_language">Language</string>
    <string name="book_pages">%1$d Pages</string>
    <string name="book_ratings_count">%1$d ratings on GoodReads</string>
    <string name="owner_picture">Owner\'s picture</string>
    <string name="book_conditions_user">"%1$s"</string>
    <string name="my_position">My position</string>
    <string name="english_language">English</string>
    <string name="italian_language">Italian</string>
    <string name="published_by">Published by %1$s</string>
    <string name="published_in">Published in %1$s</string>
    <string name="title_activity_view_book">ViewBookActivity</string>
    <string name="action_settings">Settings</string>
    <string name="books_noResults">There are no books available</string>
    <string name="bookDetail_bookOnLoan">On loan</string>
    <string name="bookDetail_bookAvailable">Available</string>
    <string name="bookDetail_bookReturnedRate">Returned to the owner! Rate your experience</string>
    <string name="bookDetail_bookInYourPossession">The book is in your possession</string>
    <string name="bookDetail_bookInYourPossessionRemember">The book is in your possession, remember to return it to:</string>
    <string name="bookDetail_terminateLoan">Terminate loan</string>
    <string name="bookDetail_terminateLoanDialogTitle">Are you sure to terminate the loan?</string>
    <string name="bookDetail_comments">See comments</string>
    <string name="books">Books</string>
    <string name="book_on_loan">Book currently on-loan:</string>
    <string name="contact_the_user">Chat</string>
    <string name="ratingDialog_title">Evaluate the user</string>
    <string name="ratingDialog_comment">Insert a comment</string>
    <string name="ratingDialog_negativeButton">Don\'t evaluate</string>
    <string name="ratingDialog_positiveButton">Send evaluation</string>
    <string name="ratingDialog_3stars">Ok</string>
</resources>