<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mad24.polito.it.fragments.BooksFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        android:elevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:theme="@style/ToolbarTheme.NoActionBar"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/books"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize" >

        <TextView
            android:id="@+id/books_emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/books_noResults"
            android:textSize="20sp"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/newBookBtn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_input_add"
            android:tint="@color/colorWhite"
            />

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/homepage_emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_noResults"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/book_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>



    </RelativeLayout>

</FrameLayout>