<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Profile"
    android:paddingLeft="@dimen/paddingLeftRight"
    android:clickable="true"
    android:focusableInTouchMode="true"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/editImageProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:paddingRight="@dimen/paddingLeftRight"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/nameProfile"
                    android:textSize="@dimen/profile_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameProfile"
                    android:textColor="@android:color/darker_gray"
                    />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:maxLength="70" />

            </LinearLayout>

            <LinearLayout
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/mailProfile"
                    android:textSize="@dimen/profile_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mailProfile"
                    android:textColor="@android:color/darker_gray"
                    />

                <EditText
                    android:id="@+id/editMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textAutoCorrect|textEmailAddress"
                    android:maxLength="70"
                    />

            </LinearLayout>

            <LinearLayout
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/bioProfile"
                    android:textSize="@dimen/profile_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bioProfile"
                    android:textColor="@android:color/darker_gray"
                    />

                <EditText
                    android:id="@+id/editBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:maxLength ="300"
                    />

            </LinearLayout>

            <LinearLayout
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/cityProfile"
                    android:textSize="@dimen/profile_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cityProfile"
                    android:textColor="@android:color/darker_gray"
                    />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:imeOptions="actionDone"
                    android:maxLength ="100"
                    android:dropDownHeight="150dp"
                    />

            </LinearLayout>

        </TableLayout>
    </ScrollView>
</LinearLayout>