<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.viewbook.BookOwnerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/borrower_inyourpossession"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bookDetail_bookInYourPossession"
            android:gravity="center"
            android:textSize="20dp"
            android:paddingTop="10dp"
            />

        <LinearLayout
            android:id="@+id/borrowerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingBottom="50dp"
            android:visibility="visible"
            >

            <!-- TODO: set a string -->
            <TextView
                android:id="@+id/borrowerTextLoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_on_loan"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/borrowerPic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription='@string/owner_picture'
                    android:src="@drawable/com_facebook_profile_picture_blank_square" />

                <TextView
                    android:id="@+id/borrowerName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="fill_vertical"
                    android:padding="10dp"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userReviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/borrowerStars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:fontFamily="@font/opensans_light"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="0.0"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="30sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/borrowerMaterialRatingBar"
                        style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_marginTop="2dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize=".1"
                        app:mrb_progressTint="#f7ec1d"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        />

                    <TextView
                        android:id="@+id/borrowerRatingNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_light"
                        android:shadowColor="@color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1"
                        android:text="0 ratings"
                        android:textColor="@color/cardview_dark_background"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        />

                    <Button
                        android:id="@+id/borrowerComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_light"
                        android:shadowColor="@color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1"
                        android:text="@string/bookDetail_comments"
                        android:background="@null"
                        android:textAllCaps="false"
                        android:textColor="@color/cardview_dark_background"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:textSize="14dp"
                        />

                </RelativeLayout>

            </LinearLayout>

            <!-- chat button-->
            <Button
                android:id="@+id/borrower_startChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_the_user"
                android:drawableLeft="@drawable/ic_chat_icon"
                android:background="@color/transparent"
                android:fontFamily="@font/opensans_regular"
                />

            <Button
                android:id="@+id/borrower_terminateLoan"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/bookDetail_terminateLoan"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/roundedbutton_red"
                android:visibility="gone"
                />

        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>